--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment 
 metadata:
   name: boardgame-deployment
 spec:
